<resources>
    <string name="app_name" translatable="false">OneSit</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="today" translatable="false">今天</string>
    <string name="yesterday" translatable="false">昨天</string>
    <string name="monday" translatable="false">周一</string>
    <string name="tuesday" translatable="false">周二</string>
    <string name="wednesday" translatable="false">周三</string>
    <string name="thursday" translatable="false">周四</string>
    <string name="friday" translatable="false">周五</string>
    <string name="saturday" translatable="false">周六</string>
    <string name="sunday" translatable="false">周日</string>
    <string name="last_month" translatable="false">&#060;</string>
    <string name="next_month" translatable="false">&#062;</string>
    <string name="user_name" translatable="false">用户名</string>
    <string name="user_password" translatable="false">密码</string>
    <string name="sign_up" translatable="false">注册</string>
    <string name="login" translatable="false">登录</string>
    <string name="log_in_with" translatable="false">Log in with</string>
    <string name="finish" translatable="false">完成</string>
    <string name="confirm" translatable="false">确认密码</string>
    <string name="email" translatable="false">电子邮箱</string>
    <string name="example1_1" translatable="false">早餐</string>
    <string name="example1_2" translatable="false">豆浆、油条、水煎包</string>
    <string name="example1_3" translatable="false">王家粥铺</string>
    <string name="words_1" translatable="false">这个世界在我眼中，是黑白汹涌和你金色的笑容。</string>
    <string name="words_2" translatable="false">我来见你了，你还真是在很远的地方啊。</string>
    <string name="search_toast" translatable="false">搜索活动、主办方或个人</string>
    <string name="market" translatable="false">活动广场</string>
    <string name="mycare" translatable="false">我的关注</string>
    <string name="this_month" translatable="false">本 月</string>
    <string name="name_2" translatable="false">未来穗香</string>
    <string name="title_1" translatable="false">初音未来上海演唱会</string>
    <string name="content_1" translatable="false">广大歌迷期待已久的初音未来演唱会上海站终于启动售票了，届时将邀请来自日本的摇滚乐队RADWIMPS以及同</string>
    <string name="place" translatable="false">地点：</string>
    <string name="place_text" translatable="false">浦东新区东新路132号</string>
    <string name="time" translatable="false">时间：</string>
    <string name="time_text" translatable="false">12月3日20:00~23:00</string>
    <string name="name_1" translatable="false">不才哎呦呦</string>
    <string name="city" translatable="false">成都</string>
    <string name="signature_text" translatable="false">只身打马过草原</string>
    <string name="signature" translatable="false">签名</string>
    <string name="publish" translatable="false">发布</string>
    <string name="care" translatable="false">关注</string>
    <string name="book" translatable="false">订阅</string>
    <string name="activity" translatable="false">活动</string>
    <string name="collect" translatable="false">收藏</string>
    <string name="ticket" translatable="false">票券</string>
    <string name="set" translatable="false">设置</string>
    <string name="logoff" translatable="false">注销</string>
    <string name="message" translatable="false">私信</string>
    <string name="interaction" translatable="false">互动</string>
    <string name="notification" translatable="false">通知</string>
    <string name="title" translatable="false">标题</string>
    <string name="start_time" translatable="false">起始时间</string>
    <string name="stop_time" translatable="false">终止时间</string>
    <string name="remind_time" translatable="false">提醒时间</string>
    <string name="seat" translatable="false">座位</string>
    <string name="tips" translatable="false">备注</string>
    <string name="add_plan" translatable="false">添加计划</string>
    <string name="place_" translatable="false">地点</string>
    <string name="school" translatable="false">西综B201</string>
    <string name="physics" translatable="false">物理课</string>
    <string name="time_context" translatable="false">2017年01月11日12:00</string>
    <string name="tips_context" translatable="false">老师今天要求完成presentation,然而我的ppt还没有完成</string>
    <string name="publish_activity" translatable="false">发布活动</string>
    <string name="title_3" translatable="false">第三届互联网大会</string>
    <string name="place_3" translatable="false">上海梅德赛斯活动馆</string>
    <string name="people" translatable="false">人数上限</string>
    <string name="more" translatable="false">详情</string>
    <string name="more_text" translatable="false">第三届互联网大会在沪举行，这次我们邀请到了当前互联网行业的移动社交领头羊、知乎创始人周源先生</string>
    <string name="picture" translatable="false">图片</string>
    <string name="myseat" translatable="false">自定义座位</string>
    <string name="legend" translatable="false">图例</string>
    <string name="empty" translatable="false">空闲</string>
    <string name="prebook" translatable="false">预订</string>
    <string name="cloud" translatable="false">云端</string>
    <string name="user_information" translatable="false">个人信息</string>
    <string name="join" translatable="false">选座加入</string>
</resources>
