<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="1dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/plan_add"
                android:layout_width="41dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/add_plan" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/plan_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="全部"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/arrow"/>
            </LinearLayout>


            <Button
                android:id="@+id/plan_publish"
                android:layout_width="41dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@mipmap/publish" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/calendar_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rectangle_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:scaleY="1.2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monday"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tuesday"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wednesday"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thursday"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/friday"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/saturday"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sunday"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="67.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/myGray" />
        <ScrollView
            android:scrollbars="none"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/plan_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>