<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical"
            android:background="@mipmap/mine_bg">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mine_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="110dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/picture_1"
                app:civ_border_color="@color/bgColor"
                app:civ_border_width="2dp"/>

            <TextView
                android:id="@+id/mine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/name_1"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                android:scaleY="1.2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/location"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/city"
                    android:textColor="@color/myBlackLight"/>
            </LinearLayout>
            <TextView
                android:id="@+id/mine_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/signature_text"
                android:textSize="10sp"
                android:textColor="@color/myBlackLight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/mine_publish_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/mine_publish_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/myPureBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publish"
                        android:textSize="10sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    android:background="@color/myGray"/>
                <LinearLayout
                    android:id="@+id/mine_care_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/mine_care_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/myPureBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/care"
                        android:textSize="10sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    android:background="@color/myGray"/>
                <LinearLayout
                    android:id="@+id/mine_book_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/mine_book_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/myPureBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book"
                        android:textSize="10sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangle_g"
        android:elevation="0.5dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/mine_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mine_activity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:text="@string/activity"
                android:textSize="15sp"
                android:textColor="@color/myBlackLight"
                android:scaleY="1.1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:alpha="0.3"/>
        <LinearLayout
            android:id="@+id/mine_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@mipmap/mine_collect"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:text="@string/collect"
                android:textSize="15sp"
                android:textColor="@color/myBlackLight"
                android:scaleY="1.1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:alpha="0.3"/>
        <LinearLayout
            android:id="@+id/mine_ticket"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:src="@mipmap/mine_ticket"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="3dp"
                android:text="@string/ticket"
                android:textSize="15sp"
                android:textColor="@color/myBlackLight"
                android:scaleY="1.1"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:alpha="0.3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/mine_set"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@mipmap/mine_set"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/set"
                    android:textSize="15sp"
                    android:textColor="@color/myBlackLight"
                    android:scaleY="1.1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:alpha="0.3"/>
            <LinearLayout
                android:id="@+id/mine_logoff"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:src="@mipmap/mine_logoff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/logoff"
                    android:textSize="15sp"
                    android:textColor="@color/myBlackLight"
                    android:scaleY="1.1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:alpha="0.3"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>